# tensorflow-directml-c-api-samples

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
cmake/: dependencies.cmake
src/: infer_squeezenet_model.cc
